@@ -1,6 +1,6 @@
 # Host: NetBSD/sparc a.out
 NATDEPFILES= fork-child.o inf-ptrace.o \
 	sparc-nat.o sparcnbsd-nat.o bsd-kvm.o solib-sunos.o
-NAT_FILE= nm-nbsd.h
+NAT_FILE= solib.h
 
 LOADLIBES= -lkvm
