@@ -1,6 +1,5 @@
 # Host: NetBSD/sparc ELF
 NATDEPFILES= fork-child.o inf-ptrace.o \
 	sparc-nat.o sparcnbsd-nat.o bsd-kvm.o
-NAT_FILE= nm-nbsd.h
 
 LOADLIBES= -lkvm
