@@ -1,30 +1,0 @@
-/* Native-dependent definitions for NetBSD/sparc a.out.
-
-   Copyright 1999, 2003 Free Software Foundation, Inc.
-
-   This file is part of GDB.
-
-   This program is free software; you can redistribute it and/or modify
-   it under the terms of the GNU General Public License as published by
-   the Free Software Foundation; either version 2 of the License, or
-   (at your option) any later version.
-
-   This program is distributed in the hope that it will be useful,
-   but WITHOUT ANY WARRANTY; without even the implied warranty of
-   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-   GNU General Public License for more details.
-
-   You should have received a copy of the GNU General Public License
-   along with this program; if not, write to the Free Software
-   Foundation, Inc., 59 Temple Place - Suite 330,
-   Boston, MA 02111-1307, USA.  */
-
-#ifndef NM_NBSDAOUT_H
-#define NM_NBSDAOUT_H
-
-#include "sparc/nm-nbsd.h"
-
-/* Get generic NetBSD a.out native definitions.  */
-#include "config/nm-nbsdaout.h"
-
-#endif /* nm-nbsdaout.h */
